--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения Хункаев Закир</title>
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
     <header></header>
     <main>
         <section>
-
+<h1>Casablanca</h1>
         </section>
     </main>
     
