--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Когнитивные искажения Хункаев Закир</title>
+    <title>Когнитивные искажения. Автор Хункаев Закир</title>
 
     <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
-    <header></header>
-    <main>
-        <section>
-<h1>Casablanca</h1>
-        </section>
-    </main>
-    
-    <footer></footer>
+    <header>
+        <h1 class="в-программировании">в программировании</h1>
+        <h1 class="Когнитивные-искажения">Когнитивные<br> искажения</h1>
+    </header>
+    <div  class="main-1"></div>
+    <p class="text-1">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.<br> Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+    <p class="text-2">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+    <a class="button" href="#5 когнитивных искажений ">
+        <span class="podrobnee">ПОДРОБНЕЕ</span>
+    </a>
+    <span class="image-1"></span>
 </body>
 </html>
