--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
     <main class="bg-white">
-        <section class='block-1110px flex bg-white'> 
+        <section class=' flex bg-white'> 
             <h1 class="center padding-top-100px padding-bottom-30">Что же это такое,
                 <br><span style="color:var(--basic)">когнитивные искажения?</span>
             </h1>
@@ -50,7 +50,7 @@
             <iframe class="video center" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </section>
         <section id="navigation" class="bg-basic-dark">
-            <nav class="cards-container container row">
+            <nav class="cards-container container">
                 
                 <a class=" bg-basic-dark card-1" href="">
                     <span style="font-family:'Neucha';font-size: 52px; color: var(--white); text-decoration: none; color:var(--basic)">5 когнитивных искажений<br>
@@ -86,10 +86,38 @@
                 <span>Неправильно рассчитывать время необходимое для завершения задачи.</span>
             </a>
         </nav>
-        </section>
+        </section ba>
 
         </section>
-        <section></section>
+        <section id="ikea-effect" class='page-header background-light'>
+            <div class="container">
+            <div class="flex-row">
+                <div class="col-1">
+                    <img style="vertical-align: middle;" src="../images/1.png" alt="">
+                </div>
+
+                <div class="col-2">
+                <p style="font-family: 'Neucha';font-size: 24px; line-height: 29px;color: #908d8d; margin-top: 0px;">Когнитивные искажения</p>
+                <h2 style="color:var(--dark);line-height: 72px; margin-top: 0px;">Эффект ИКЕА</h2>
+                <h3 style="color:var(--dark); font-style: normal; ">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+                </div>
+            </div>
+            <h4 style="font-family: 'OpenSans-Regular';color: var(--white); background: #B09A81; margin-top: 100px; margin-bottom: 20px;">КАК ПРОЯВЛЯЕТСЯ</h4>
+            
+            <div class="flex-row">
+                <div class="col-1">
+                    <p>
+                        Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.
+                    </p>
+                </div>
+                <div class="col-2">
+                    <p>
+                        Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.
+                    </p>
+                </div>
+            </div>
+        </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
