--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,35 @@
             </div>
         </div>
         </section>
-        <section></section>
+        <section id="premature-optimization" class="page-header bg-brown">
+            <div class="container">
+                <div class="flex-row">
+                    <div class="col-1">
+                        <p style="font-family:'Neucha'; font-size: 24px; line-height: 29px;color:#D7CCC0; margin: 0px;">Когнитивные искажения</p>
+                        <h2 style="color:#ffffff; margin-bottom: 30px; margin-top:0px;">Преждевременная оптимизация</h2>
+                        <p style="font-family: 'Neucha'; font-size: 34px; color: #ffffff; line-height: 120%;";>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                    </div>
+                    <div class="col-2">
+                        <img src="../../layout-designer-project-58/images/2.png" alt="hexlet demonstrating how rocket lounch on his laptop">
+                    </div>
+                </div>
+            
+            <h4 style="font-family: 'OpenSans-Regular';color: var(--brown); background: var(--white); margin-top: 100px; margin-bottom: 20px;">КАК ПРОЯВЛЯЕТСЯ</h4>
+            
+            <div class="flex-row">
+                <div class="col-1">
+                    <p style="color:var(--white)">
+                        Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.
+                    </p>
+                </div>
+                <div class="col-2">
+                    <p style="color:var(--white)">
+                        Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.
+                    </p>
+                </div>
+            </div>
+        </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
