--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                 <div class="col-2">
                 <p style="font-family: 'Neucha';font-size: 24px; line-height: 29px;color: #908d8d; margin-top: 0px;">Когнитивные искажения</p>
                 <h2 style="color:var(--dark);line-height: 72px; margin-top: 0px;">Эффект ИКЕА</h2>
-                <h3 style="color:var(--dark); font-style: normal; ">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+                <h3 style="color:var(--dark); font-style: normal; font-weight: 400; ">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
                 </div>
             </div>
             <h4 style="font-family: 'OpenSans-Regular';color: var(--white); background: #B09A81; margin-top: 100px; margin-bottom: 20px;">КАК ПРОЯВЛЯЕТСЯ</h4>
@@ -147,7 +147,36 @@
             </div>
         </div>
         </section>
-        <section></section>
+        <section id="distortion-of-novelty" class='page-header background-light'>
+            <div class="container">
+                <div class="flex-row">
+                    <div class="col-1">
+                        <img style="vertical-align: middle;" src="../images/3.png" alt="">
+                    </div>
+    
+                    <div class="col-2">
+                    <p style="font-family: 'Neucha';font-size: 24px; line-height: 29px;color: #908d8d; margin-top: 0px;">Когнитивные искажения</p>
+                    <h2 style="color:var(--dark);line-height: 72px; margin-top: 0px;">Искажение новизны</h2>
+                    <h3 style="color:var(--dark); font-style: normal;font-weight: 400; ">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</h3>
+                    </div>
+                </div>
+                <h4 style="font-family: 'OpenSans-Regular';color: var(--white); background: #B09A81; margin-top: 100px; margin-bottom: 20px;">КАК ПРОЯВЛЯЕТСЯ</h4>
+                
+                <div class="flex-row">
+                    <div class="col-1">
+                        <p>
+                            Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!
+                        </p>
+                    </div>
+                    <div class="col-2">
+                        <p>
+                            Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <section></section>
         <section></section>
     </main>
