--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,35 @@
             </div>
 
         </section>
-        <section></section>
+        <section id="hyperbolic-depreciation" class="page-header bg-brown">
+            <div class="container">
+                <div class="flex-row">
+                    <div class="col-1">
+                        <p style="font-family:'Neucha'; font-size: 24px; line-height: 29px;color:#D7CCC0; margin: 0px;">Когнитивные искажения</p>
+                        <h2 style="color:#ffffff; margin-bottom: 30px; margin-top:0px;">Гиперболическое обесценивание</h2>
+                        <p style="font-family: 'Neucha'; font-size: 34px; color: #ffffff; line-height: 120%;";>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будующем.</p>
+                    </div>
+                    <div class="col-2">
+                        <img src="../../layout-designer-project-58/images/4.png" alt="hexlet with colden coins in hends, does not see a chest full of gold over the mountain ">
+                    </div>
+                </div>
+            
+            <h4 style="font-family: 'OpenSans-Regular';color: var(--brown); background: var(--white); margin-top: 100px; margin-bottom: 20px;">КАК ПРОЯВЛЯЕТСЯ</h4>
+            
+            <div class="flex-row">
+                <div class="col-1">
+                    <p style="color:var(--white)">
+                        Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.
+                    </p>
+                </div>
+                <div class="col-2">
+                    <p style="color:var(--white)">
+                        Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будующем намного выше. В итоге вы сохраните много времени.
+                    </p>
+                </div>
+            </div>
+        </div>
+        </section>
         <section></section>
     </main>
     <footer></footer>
