--- a/src/index.html
+++ b/src/index.html
@@ -206,7 +206,38 @@
             </div>
         </div>
         </section>
-        <section></section>
+        <section id="errors-in-planning" class="page-header background-light">
+            <div class="container">
+                <div class="flex-row">
+                    <div class="col-1">
+                        <img style="vertical-align: middle;" src="../images/5.png" alt="Hexlet sits and plans something">
+                    </div>
+    
+                    <div class="col-2">
+                    <p style="font-family: 'Neucha';font-size: 24px; line-height: 29px;color: #908d8d; margin-top: 0px;">Когнитивные искажения</p>
+                    <h2 style="color:var(--dark);line-height: 72px; margin-top: 0px;">Ошибка планирования</h2>
+                    <h3 style="color:var(--dark); font-style: normal;font-weight: 400; ">Неправильно рассчитывать время необходимое для завершения задачи</h3>
+                    </div>
+                </div>
+                <h4 style="font-family: 'OpenSans-Regular';color: var(--white); background: #B09A81; margin-top: 100px; margin-bottom: 20px;">КАК ПРОЯВЛЯЕТСЯ</h4>
+                
+                <div class="flex-row">
+                    <div class="col-1">
+                        <p style="padding: 5px"> 
+                            Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
+                        </p>
+                    </div>
+                    <div class="col-2">
+                        <p>
+                            Это отлично выражается в старом афоризме:
+                        </p>
+                        <p>
+                            Первые 90% готового кода отнимают первые 90% времени разработчика. Оставшиеся 10% отнимают вторые 90% времени разработки.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
