--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <img class="img-main" src="./images/main.png" alt="hexlet sitting with laptop and working on project">
             <h1 class="margin-top-0 margin-bottom-185">
-                 <span style="color:var(--basic)">Когнитивные
+                 <span class="decor-20">Когнитивные
                 <br>
                  искажения </span>
             <br>в программировании
