--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     </header>
     <main class="bg-white">
         <section class=' flex bg-white'> 
-            <h1 class="center padding-top-100px padding-bottom-30">Что же это такое,
+            <h1 class="center margin-top-100px padding-bottom-30">Что же это такое,
                 <br><span style="color:var(--basic)">когнитивные искажения?</span>
             </h1>
             <p class="padding-bottom-30px">Что такое когнитивные искажения. Petrovna Channel</p>
@@ -122,7 +122,7 @@
                     <div class="col-1">
                         <p class="decor-8">Когнитивные искажения</p>
                         <h2 class="decor-9">Преждевременная оптимизация</h2>
-                        <p class="decor-10";>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                        <p class="decor-10">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                     </div>
                     <div class="col-2">
                         <img src="./images/2.png" alt="hexlet demonstrating how rocket lounch on his laptop">
@@ -149,7 +149,7 @@
             <div class="container">
                 <div class="flex-row">
                     <div class="col-1">
-                        <img style="vertical-align: middle;" src="../images/3.png" alt="">
+                        <img style="vertical-align: middle;" src="./images/3.png" alt="">
                     </div>
     
                     <div class="col-2">
@@ -246,7 +246,7 @@
                         <h3 class="decor-12">Подпишитесь на обновления</h3>
                     </div>
                     <div class="col-2">
-                        <form action="">
+                        <form action="#">
                             <label for="mail" class="decor-12"> Электронная почта</label><br>
                             <div class="decor-16">
                             <input id="mail" type="text" placeholder="Ваша электронная почта">
