--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@
     </header>
     <main class="bg-white">
         <section class=' flex bg-white'> 
-            <h1 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0">Что же это такое,
-                <br><span style="color:var(--basic)">когнитивные искажения?</span>
-            </h1>
+            <h2 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0">Что же это такое,
+                <br><span class="decor-20">когнитивные искажения?</span>
+            </h2>
             <p class="padding-bottom-30px">Что такое когнитивные искажения. Petrovna Channel</p>
             <iframe class="video center" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </section>
