--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
         </div>
         </section>
         <section id="premature-optimization" class="page-header bg-brown">
-            <div class="container">
+            <div class="container padding-bottom0-margin-bottom-100 " style="padding-bottom: 0;">
                 <div class="flex-row">
                     <div class="col-1">
                         <p class="decor-8">Когнитивные искажения</p>
