--- a/src/index.html
+++ b/src/index.html
@@ -68,19 +68,19 @@
                 <h3>Преждевременная оптимизация</h3>
                 <span>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</span>
             </a>
-            <a class="card hover" href="#distortion-of-novelty">
+            <a class="card hover" href="#distortion-of-novelty" style="height:348px">
                 <span class="num-style">3</span>
                 <h3>Искажение новизны</h3>
                 <span>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</span>
             </a>
-            <a class="card hover" href="#hyperbolic-depreciation">
+            <a class="card hover" href="#hyperbolic-depreciation" style="height:348px">
                 <span class="num-style">4</span>
                 
                 <h3>Гиперболическое обесценивание</h3>
                 <span>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</span>
               
             </a>
-            <a class="card hover" href="#errors-in-planning">
+            <a class="card hover" href="#errors-in-planning" style="height:348px">
                 <span class="num-style">5</span>
                 <h3>Ошибка планирования</h3>
                 <span>Неправильно рассчитывать время необходимое для завершения задачи.</span>
