--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
         </div>
     </header>
     <main class="bg-white">
-        <section class=' flex bg-white'> 
-            <h2 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0">Что же это такое,
+        <section class=' flex bg-white' style="margin-bottom:-200px; padding-bottom: 100px;"> 
+            <h2 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0" style="padding-bottom: 0;">Что же это такое,
                 <br><span class="decor-20">когнитивные искажения?</span>
             </h2>
             <p class="padding-bottom-30px">Что такое когнитивные искажения. Petrovna Channel</p>
