--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,12 @@
         </div>
     </header>
     <main class="bg-white">
-        <section class=' flex bg-white' style="margin-bottom:-200px; padding-bottom: 100px;"> 
+        <section class=' flex bg-white' style="margin-bottom:-200px; padding-bottom: 120px;"> 
             <h2 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0" style="padding-bottom: 0;">Что же это такое,
                 <br><span class="decor-20">когнитивные искажения?</span>
             </h2>
             <p class="padding-bottom-30px">Что такое когнитивные искажения. Petrovna Channel</p>
-            <iframe class="video center" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video-filter video center" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </section>
         <section id="navigation" class="bg-basic-dark padding-top-100 ">
             <nav class="cards-container container">
