--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,11 @@
         </div>
     </header>
     <main class="bg-white">
-        <section class=' flex bg-white' style="margin-bottom:-200px; padding-bottom: 120px;"> 
+        <section class=' flex bg-white' style="margin-bottom:-220px; padding-bottom: 120px;"> 
             <h2 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0" style="padding-bottom: 0;">Что же это такое,
                 <br><span class="decor-20">когнитивные искажения?</span>
             </h2>
-            <p class="padding-bottom-30px">Что такое когнитивные искажения. Petrovna Channel</p>
+            <p class="padding-bottom-30px" style="margin-bottom: 30px">Что такое когнитивные искажения. Petrovna Channel</p>
             <iframe class="video-filter video center" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </section>
         <section id="navigation" class="bg-basic-dark padding-top-100 ">
