--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-2">
                     <p class="decor-12" style="color: #2A2626">
-                        Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
+                        Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
 
                         <p class="decor-12" style="color: #2A2626; margin-top: 0">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
                     
@@ -42,7 +42,7 @@
         </div>
     </header>
     <main class="bg-white">
-        <section class=' flex bg-white' style="margin-bottom:-200px; padding-bottom: 100px;"> 
+        <section class="flex bg-white" style="margin-bottom:-200px; padding-bottom: 100px;"> 
             <h2 class="center margin-top-100 padding-bottom-30 font-weight-400 margin-bottom-0" style="padding-bottom: 0; margin-bottom: 15px">Что же это такое,
                 <br><span class="decor-20">когнитивные искажения?</span>
             </h2>
@@ -87,7 +87,7 @@
             </a>
         </nav>
         </section>
-        <section id="ikea-effect" class='page-header background-light'>
+        <section id="ikea-effect" class="page-header background-light">
             <div class="container">
             <div class="flex-row">
                 <div class="col-1">
@@ -145,7 +145,7 @@
             </div>
         </div>
         </section>
-        <section id="distortion-of-novelty" class='page-header background-light'>
+        <section id="distortion-of-novelty" class="page-header background-light">
             <div class="container">
                 <div class="flex-row">
                     <div class="col-1">
