modified index.html, style.css

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
     <header class="page-header background-light">
-        <div id="padding-bottom-0" class="container padding-bottom-0-margin-bottom-100">
+        <div class="container padding-bottom-0-margin-bottom-100 padding-bottom-0">
             <img class="img-main" src="./images/main.png" alt="hexlet sitting with laptop and working on project">
             <h1 class="margin-top-0 margin-bottom-185 font-weight-400">
                  <span class="decor-20">Когнитивные
@@ -112,7 +112,7 @@
         </div>
         </section>
         <section id="premature-optimization" class="page-header bg-brown">
-            <div id="padding-bottom-0" class="container padding-bottom-0-margin-bottom-100">
+            <div class="container padding-bottom-0-margin-bottom-100 padding-bottom-0">
                 <div class="flex-row">
                     <div class="col-1">
                         <p class="decor-8">Когнитивные искажения</p>
