--- a/src/index.html
+++ b/src/index.html
@@ -237,8 +237,7 @@
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col-1">
-                        <h3 class="decor-12">Хотите узнать больше?</h3>
-                        <h3 class="decor-12">Подпишитесь на обновления</h3>
+                        <h3 class="decor-12">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
                     </div>
                     <div class="col-2">
                         <form action="#">
