--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <br>в программировании
             </h1>
             <div class="flex-row padding-top-50">
-                <div class="col" >
+                <div class="col">
                     <p>
                         Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
                     </p>
@@ -42,9 +42,9 @@
                 <br><span class="color-basic">когнитивные искажения?</span>
             </h2>
             <p class="margin-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
-            <iframe class="video-filter" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video-filter border-0" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
         </section>
-        <section id="navigation" class="bg-basic-dark padding-top-100 ">
+        <div id="navigation" class="bg-basic-dark padding-top-100 ">
             <nav class="cards-container container">
                 
                 <a class="card-1" href="#navigation">
@@ -81,7 +81,7 @@
                 <span>Неправильно рассчитывать время необходимое для завершения задачи.</span>
             </a>
         </nav>
-        </section>
+    </div>
         <section id="ikea-effect" class="page-header background-light">
             <div class="container">
             <div class="flex-row">
