correction on the first paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,8 @@
 
                 <div class="col">
                 <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
-                <h2 class="color-dark line-height-72 margin-top-0 font-weight-400">Эффект ИКЕА</h2>
-                <h3 class="color-dark font-style-normal font-weight-400">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+                <h2 class="line-height-72 margin-top-0 font-weight-400">Эффект ИКЕА</h2>
+                <h3 class="font-weight-400">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
                 </div>
             </div>
             <h4 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-20 to-upper-case">как проявляется</h4>
@@ -149,8 +149,8 @@
     
                     <div class="col">
                     <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
-                    <h2 class="color-dark line-height-72 margin-top-0 font-weight-400">Искажение новизны</h2>
-                    <h3 class="color-dark font-weight-400">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</h3>
+                    <h2 class="line-height-72 margin-top-0 font-weight-400">Искажение новизны</h2>
+                    <h3 class="font-weight-400">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</h3>
                     </div>
                 </div>
                 <h4 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-20 to-upper-case">как проявляется</h4>
@@ -208,8 +208,8 @@
     
                     <div class="col">
                     <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
-                    <h2 class="color-dark line-height-72 margin-top-0 font-weight-400">Ошибка планирования</h2>
-                    <h3 class="color-dark font-style-normal font-weight-400">Неправильно рассчитывать время необходимое для завершения задачи</h3>
+                    <h2 class="line-height-72 margin-top-0 font-weight-400">Ошибка планирования</h2>
+                    <h3 class="font-weight-400">Неправильно рассчитывать время необходимое для завершения задачи</h3>
                     </div>
                 </div>
                 <h4 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-20 to-upper-case">как проявляется</h4>
@@ -233,7 +233,7 @@
         </section>
     </main>
     <footer>
-        <div class="flex bg-white">
+        <div class="flex">
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
