modified double classes, step 4

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         <div id="navigation" class="bg-basic-dark padding-top-100 ">
             <nav class="cards-container container">
                 
-                <a class="card-1" href="#navigation">
+                <a class="card bg-basic-dark text-decoration-none display-flex line-height-1 color-white" href="#navigation">
                     <span class="font-family-neucha font-size-52 text-decoration-none color-basic">5 когнитивных искажений<br>
                          <span class="font-family-neucha font-size-50 color-white">о существовании которых стоит помнить</span>
                     </span>
