step 7 after modifying index.html

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="container padding-bottom-0-margin-bottom-100 padding-bottom-0">
             <img class="img-main" src="./images/main.png" alt="hexlet sitting with laptop and working on project">
             <h1 class="margin-top-0 margin-bottom-185 font-weight-400">
-                 <span class="color-basic">Когнитивные<br>искажения<br>в программировании
+                 <span class="color-basic">Когнитивные<br>искажения<br>в программировании</span>
             </h1>
             <div class="flex-row padding-top-50">
                 <div class="col">
