--- a/src/index.html
+++ b/src/index.html
@@ -36,31 +36,31 @@
         </section>
         <div id="navigation" class="bg-basic-dark padding-top-100 ">
             <nav class="cards-container container">
-                <a class="card bg-basic-dark text-decoration-none display-flex line-height-1 color-white" href="#navigation">
+                <a class="card bg-basic-dark text-decoration-none display-flex line-height-120 color-white" href="#navigation">
                     <span class="font-family-neucha font-size-52 color-basic display-block">5 когнитивных искажений</span>
                     <span class="font-family-neucha font-size-52 color-white">о существовании которых стоит помнить</span>
                 </a>
-                <a class="card hover" href="#ikea-effect">
+                <a class="card padding-24 hover" href="#ikea-effect">
                     <span class="num-style ">1</span>
                     <h3 class="font-weight-400">Эффект ИКЕА</h3>
                     <span>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</span>
                 </a>
-                <a class="card hover" href="#premature-optimization">
+                <a class="card padding-24 hover" href="#premature-optimization">
                     <span class="num-style">2</span>
                     <h3 class="font-weight-400">Преждевременная оптимизация</h3>
                     <span>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</span>
                 </a>
-                <a class="card hover height-348" href="#distortion-of-novelty">
+                <a class="card padding-24 hover height-348" href="#distortion-of-novelty">
                     <span class="num-style">3</span>
                     <h3 class="font-weight-400">Искажение новизны</h3>
                     <span>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</span>
                 </a>
-                <a class="card hover height-348" href="#hyperbolic-depreciation">
+                <a class="card padding-24 hover height-348" href="#hyperbolic-depreciation">
                     <span class="num-style">4</span>
                     <h3 class="font-weight-400">Гиперболическое обесценивание</h3>
                     <span>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</span>
                 </a>
-                <a class="card hover height-348" href="#errors-in-planning">
+                <a class="card padding-24 hover height-348" href="#errors-in-planning">
                     <span class="num-style">5</span>
                     <h3 class="font-weight-400">Ошибка планирования</h3>
                     <span>Неправильно рассчитывать время необходимое для завершения задачи.</span>
