--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <div id="navigation" class="bg-basic-dark padding-top-100 ">
             <nav class="cards-container container">
                 <a class="card bg-basic-dark color-white" href="#navigation">
-                    <span class="line-height-120 font-family-neucha font-size-52 color-basic display-block">5 когнитивных искажений</span>
+                    <span class="line-height-120 font-family-neucha font-size-52 color-basic">5 когнитивных искажений</span>
                     <span class="line-height-120 font-family-neucha font-size-52 color-white">о существовании которых стоит помнить</span>
                 </a>
                 <a class="card padding-24 hover" href="#ikea-effect">
