--- a/src/index.html
+++ b/src/index.html
@@ -43,27 +43,27 @@
                 <a class="card padding-24 hover" href="#ikea-effect">
                     <span class="num-style ">1</span>
                     <h3 class="font-weight-400">Эффект ИКЕА</h3>
-                    <span>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</span>
+                    <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </a>
                 <a class="card padding-24 hover" href="#premature-optimization">
                     <span class="num-style">2</span>
                     <h3 class="font-weight-400">Преждевременная оптимизация</h3>
-                    <span>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</span>
+                    <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                 </a>
                 <a class="card padding-24 hover height-348" href="#distortion-of-novelty">
                     <span class="num-style">3</span>
                     <h3 class="font-weight-400">Искажение новизны</h3>
-                    <span>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</span>
+                    <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
                 </a>
                 <a class="card padding-24 hover height-348" href="#hyperbolic-depreciation">
                     <span class="num-style">4</span>
                     <h3 class="font-weight-400">Гиперболическое обесценивание</h3>
-                    <span>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</span>
+                    <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
                 </a>
                 <a class="card padding-24 hover height-348" href="#errors-in-planning">
                     <span class="num-style">5</span>
                     <h3 class="font-weight-400">Ошибка планирования</h3>
-                    <span>Неправильно рассчитывать время необходимое для завершения задачи.</span>
+                    <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
                 </a>
         </nav>
         </div>
