--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <div class="container">
             <div class="flex-row">
                 <div class="col">
-                    <img class="vertical-align-middle img-filter" src="./images/1.png" alt="">
+                    <img class="img-filter" src="./images/1.png" alt="">
                 </div>
                 <div class="col">
                     <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="flex-row">
                     <div class="col">
-                        <img class="vertical-align-middle img-filter" src="./images/3.png" alt="#">
+                        <img class="img-filter" src="./images/3.png" alt="#">
                     </div>
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
@@ -163,7 +163,7 @@
             <div class="container">
                 <div class="flex-row">
                     <div class="col">
-                        <img class="vertical-align-middle img-filter" src="./images/5.png" alt="Hexlet sits and plans something">
+                        <img class="img-filter" src="./images/5.png" alt="Hexlet sits and plans something">
                     </div>
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
