--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
     <header class="page-header background-light">
-        <div class="container padding-bottom-0-margin-bottom-100 padding-bottom-0">
+        <div class="container">
             <img class="img-main" src="./images/main.png" alt="hexlet sitting with laptop and working on project">
             <h1 class="margin-top-0 margin-bottom-185 font-weight-400">
                  <span class="color-basic">Когнитивные<br>искажения<br>в программировании</span>
@@ -91,7 +91,7 @@
         </div>
         </section>
         <section id="premature-optimization" class="page-header bg-brown">
-            <div class="container padding-bottom-0-margin-bottom-100 padding-bottom-0">
+            <div class="container">
                 <div class="flex-row">
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 margin-0 color-translucent-white">Когнитивные искажения</p>
