--- a/src/index.html
+++ b/src/index.html
@@ -105,10 +105,10 @@
             <h3 class="font-family-opensans color-brown bg-white margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
             <div class="flex-row">
                 <div class="col">
-                    <p class="color-white">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+                    <p class="color-white margin-bottom-0">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
                 </div>
                 <div class="col">
-                    <p class="color-white">Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
+                    <p class="color-white margin-bottom-0">Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
                 </div>
             </div>
         </div>
