--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col">
                     <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
-                    <h2 class="line-height-72 margin-top-0 font-weight-400">Эффект ИКЕА</h2>
+                    <h2 class="margin-top-0 font-weight-400">Эффект ИКЕА</h2>
                     <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="flex-row">
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 margin-0 color-translucent-white">Когнитивные искажения</p>
-                        <h2 class="color-white margin-bottom-30 margin-top-0 line-height-72 font-weight-400">Преждевременная оптимизация</h2>
+                        <h2 class="color-white margin-bottom-30 margin-top-0 font-weight-400">Преждевременная оптимизация</h2>
                         <p class="font-family-neucha font-size-34 color-white line-height-120 margin-top-0">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                     </div>
                     <div class="col">
@@ -121,7 +121,7 @@
                     </div>
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
-                        <h2 class="line-height-72 margin-top-0 font-weight-400">Искажение новизны</h2>
+                        <h2 class="margin-top-0 font-weight-400">Искажение новизны</h2>
                         <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                 <div class="flex-row">
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-white margin-0">Когнитивные искажения</p>
-                        <h2 class="color-white margin-bottom-30 margin-top-0 line-height-72 font-weight-400">Гиперболическое обесценивание</h2>
+                        <h2 class="color-white margin-bottom-30 margin-top-0 font-weight-400">Гиперболическое обесценивание</h2>
                         <p class="font-family-neucha font-size-34 color-white line-height-120">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будующем.</p>
                     </div>
                     <div class="col">
@@ -167,7 +167,7 @@
                     </div>
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
-                        <h2 class="line-height-72 margin-top-0 font-weight-400">Ошибка планирования</h2>
+                        <h2 class="margin-top-0 font-weight-400">Ошибка планирования</h2>
                         <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Неправильно рассчитывать время необходимое для завершения задачи</p>
                     </div>
                 </div>
