--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                     <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </div>
             </div>
-            <h4 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-20 to-upper-case">как проявляется</h4>
+            <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
             <div class="flex-row">
                 <div class="col">
                     <p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
@@ -125,7 +125,7 @@
                         <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
                     </div>
                 </div>
-                <h4 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-20 to-upper-case">как проявляется</h4>
+                <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
                 <div class="flex-row">
                     <div class="col">
                         <p>Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
@@ -171,7 +171,7 @@
                         <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Неправильно рассчитывать время необходимое для завершения задачи</p>
                     </div>
                 </div>
-                <h4 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-20 to-upper-case">как проявляется</h4>
+                <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
                 <div class="flex-row">
                     <div class="col">
                         <p class="padding-5">Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
