--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <div class="container">
             <div class="flex-row">
                 <div class="col">
-                    <img class="img-filter" src="./images/1.png" alt="">
+                    <img class="img-filter" src="./images/1.png" alt="two characters look at the monitor and can't figure something out">
                 </div>
                 <div class="col">
                     <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="flex-row">
                     <div class="col">
-                        <img class="img-filter" src="./images/3.png" alt="#">
+                        <img class="img-filter" src="./images/3.png" alt="hexlet stands at a filled garbage can and at the level of his head the image of a burning lamp">
                     </div>
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
