--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                 <div class="col">
                     <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
                     <h2 class="margin-top-0 font-weight-400">Эффект ИКЕА</h2>
-                    <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                    <p class="font-family-neucha font-size-34 line-height-120">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </div>
             </div>
             <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
@@ -122,7 +122,7 @@
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
                         <h2 class="margin-top-0 font-weight-400">Искажение новизны</h2>
-                        <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+                        <p class="font-family-neucha font-size-34 line-height-120">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
                     </div>
                 </div>
                 <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
@@ -168,7 +168,7 @@
                     <div class="col">
                         <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
                         <h2 class="margin-top-0 font-weight-400">Ошибка планирования</h2>
-                        <p class="font-family-neucha font-size-34 line-height-120 font-weight-400">Неправильно рассчитывать время необходимое для завершения задачи</p>
+                        <p class="font-family-neucha font-size-34 line-height-120">Неправильно рассчитывать время необходимое для завершения задачи</p>
                     </div>
                 </div>
                 <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
