--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,10 @@
                 </div>
                 <div class="col">
                     <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
-                    <p class="margin-top-0">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
-                    <a class="btn btn-style hover to-upper-case" href="#navigation">подробнее</a>
-                </div>
-            </div>
-            
+                    <p class="margin-bottom-0">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+                    <a class="btn btn-style hover to-upper-case margin-top-40 display-inline-block" href="#navigation">подробнее</a>
+                </div>        
+            </div>     
         </div>
     </header>
     <main>
@@ -65,7 +64,7 @@
                     <h3 class="font-weight-400">Ошибка планирования</h3>
                     <p class="margin-0 color-dark padding-top-16">Неправильно рассчитывать время необходимое для завершения задачи.</p>
                 </a>
-        </nav>
+            </nav>
         </div>
         <section id="ikea-effect" class="page-header background-light">
             <div class="container">
@@ -74,7 +73,7 @@
                     <img class="img-filter" src="./images/1.png" alt="two characters look at the monitor and can't figure something out">
                 </div>
                 <div class="col">
-                    <p class="font-family-neucha font-size-24 line-height-29 color-translucent-dark margin-top-0">Когнитивные искажения</p>
+                    <p class="font-family-neucha font-size-24 line-height-29 margin-0 color-translucent-dark">Когнитивные искажения</p>
                     <h2 class="margin-top-0 font-weight-400">Эффект ИКЕА</h2>
                     <p class="font-family-neucha font-size-34 line-height-120">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </div>
@@ -186,7 +185,7 @@
     </main>
     <footer>
         <div class="flex">
-            <div class="container margin-top-100 bg-basic-dark">
+            <div class="container margin-top-100 bg-basic-dark padding-sides-55">
                 <div class="flex-row-footer">
                     <div class="col">
                         <h3 class="color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
