--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col">
                     <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
-                    <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+                    <p class="margin-top-0">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
                     <a class="btn btn-style hover to-upper-case" href="#navigation">подробнее</a>
                 </div>
             </div>
