--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
                  <span class="color-basic">Когнитивные<br>искажения<br>в программировании</span>
             </h1>
             <div class="flex-row padding-top-50">
-                <div class="col">
+                <div class="width-50">
                     <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
                 </div>
-                <div class="col">
+                <div class="width-50">
                     <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
                     <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
                     <a class="btn btn-style hover to-upper-case" href="#navigation">подробнее</a>
